--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -25,7 +25,7 @@ endpoint = "https://api.openai.com/v1/chat/completions"
 encoding = "cl100k_base"
 model = "gpt-3.5-turbo"
 rate_limit = 6
-temperature = 0.9
+temperature = 0.8
 tokens = 750
 tokens_max = 3899
 
@@ -250,7 +250,7 @@ This project is protected under the [SELECT-A-LICENSE](https://choosealicense.co
 
 # Language Model Prompts
 [prompts]
-features = """Hello! Analyze the codebase "{}" and create a concise analysis of each project component. \
+features = """Hello! Analyze the codebase "{0}" and create a concise analysis of each project component. \
 Consider the codebase as a whole and highlight the key characteristics, design patterns, architectural decisions, and any other noteworthy elements.
 Generate your response as a Markdown table with the following columns:
 
@@ -269,21 +269,20 @@ Generate your response as a Markdown table with the following columns:
 
 Provided information includes:
 
-- Repository directory structure: {}
-- Repository dependencies and software: {}
-- Codebase file summaries: {}
+- Repository directory structure: {1}
+- Repository dependencies and software: {2}
+- Codebase file summaries: {3}
 
 Thank you for your time and effort!
 """
-overview = """Please analyze the codebase located at {} and provide a robust, yet succinct overview of the project. \
-Provided are summaries of key code file in the repository:\n{}\n
-Craft a 3-4 sentence paragraph that encapsulate the core functionalities of the project, its purpose and value proposition. \
-Avoid technical jargon and focus on the project's use-case and benefits.
+overview = """Analyze the codebase named {} ({}) and provide a robust, yet succinct overview of the project.\n
+Craft a paragraph, 80 TOKEN MAXIMUM, that encapsulate the core functionalities of the project, its purpose and value proposition.\n
+Avoid deep technical details and focus on the project's high-level use cases and features.\n
+Provided are codebase file descriptions:\n{}\n
 """
-slogan = """Conceptualize a catchy and memorable slogan for the project: {}. \
-Limit the project's slogan to 8 words or less. \
-Use the following code summaries from the repository to help you craft the slogan:\n
-{}
+slogan = """Conceptualize a catchy and memorable slogan for the project: {}.\n
+Limit the project's slogan to 8 words or less.\n
+Use the following code summaries from the repository to help you craft the slogan:\n{}\n
 """
 summaries = """Deliver a succinct summary in no more than 50 tokens, emphasizing the main role \
 and critical features of this code snippet in relation to its parent repository's architecture. \
