--- a/readmeai/settings/language_setup.toml
+++ b/readmeai/settings/language_setup.toml
@@ -1,6 +1,7 @@
 # Programming language setup and run instructions
 
 [language_setup]
+default = ["> INSERT-INSTALL-COMMANDS", "> INSERT-RUN-COMMANDS", "> INSERT-TEST-COMMANDS"]
 C = ["gcc -o myapp main.c", "./myapp", "/* No common unit test framework in C */"]
 CPP = ["g++ -o myapp main.cpp", "./myapp", "Insert test command."]
 CSharp = ["dotnet build", "dotnet run", "dotnet test"]
