--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -54,6 +54,7 @@ header = """\
 </div>
 <hr>
 """
+badges_dependencies = """\t<em>Developed with the software and tools below</em>\n</p>\n<p align="{alignment}">\n\t{badges}\n"""
 badges_shields = """
 <img src="https://img.shields.io/{git_host}/license/{full_name}?style={badges_style}" alt="license">
 \t<img src="https://img.shields.io/{git_host}/last-commit/{full_name}?style={badges_style}" alt="last-commit">
