--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -61,24 +61,23 @@ badges_shields = """
 \t<img src="https://img.shields.io/{host}/languages/top/{full_name}?style={badge_style}&color={badge_color}" alt="repo-top-language">
 \t<img src="https://img.shields.io/{host}/languages/count/{full_name}?style={badge_style}&color={badge_color}" alt="repo-language-count">
 """
-badges_skills = """<a href="https://skillicons.dev">\n\t\t<img src="{}">\n\t</a>
-"""
+badges_skills = """<a href="https://skillicons.dev">\n\t\t<img src="{}">\n\t</a>"""
 
 toc = """
 ## 🔗 Quick Links
-- [🔗 Quick Links](#-quick-links)
-- [📍 Overview](#-overview)
-- [📦 Features](#-features)
-- [📂 Repository Structure](#-repository-structure)
-- [🧩 Modules](#modules)
-- [🚀 Getting Started](#-getting-started)
-    - [⚙️ Installation](#-installation)
-    - [🤖 Running {0}](#-running-{0})
-    - [🧪 Tests](#-tests)
-- [🛠 Roadmap](#-roadmap)
-- [🤝 Contributing](#-contributing)
-- [📄 License](#-license)
-- [👏 Acknowledgments](#-acknowledgments)
+
+> - [📍 Overview](#-overview)
+> - [📦 Features](#-features)
+> - [📂 Repository Structure](#-repository-structure)
+> - [🧩 Modules](#-modules)
+> - [🚀 Getting Started](#-getting-started)
+>     - [⚙️ Installation](#-installation)
+>     - [🤖 Running {repo_name}](#-running-{repo_name})
+>     - [🧪 Tests](#-tests)
+> - [🛠 Project Roadmap](#-project-roadmap)
+> - [🤝 Contributing](#-contributing)
+> - [📄 License](#-license)
+> - [👏 Acknowledgments](#-acknowledgments)
 
 ---
 """
@@ -114,7 +113,7 @@ modules = """
 """
 modules_widget = """<details closed><summary>{0}</summary>\n\n{1}\n\n</details>\n"""
 
-getting_started = """
+quickstart = """
 ---
 
 ## 🚀 Getting Started
@@ -123,35 +122,40 @@ getting_started = """
 
 Ensure you have the following dependencies installed on your system:
 
-* {language_name}: `► INSERT-VERSION-HERE`
-* `► ...`
-* `► ...`
+* {requirements}
 
 ### ⚙️ Installation
 
 1. Clone the {repo_name} repository:
+
 ```sh
 git clone {repo_url}
 ```
 
 2. Change to the project directory:
+
 ```sh
 cd {repo_name}
 ```
 
 3. Install the dependencies:
+
 ```sh
 {install_command}
 ```
 
 ### 🤖 Running {repo_name}
+
 Use the following command to run {repo_name}:
+
 ```sh
 {run_command}
 ```
 
 ### 🧪 Tests
+
 To execute tests, run:
+
 ```sh
 {test_command}
 ```
@@ -172,24 +176,24 @@ contribute = """
 
 Contributions are welcome! Here are several ways you can contribute:
 
-- **[Submit Pull Requests](https://github.com/{full_name}/blob/main/CONTRIBUTING.md)**: Review open PRs, and submit your own PRs.
-- **[Join the Discussions](https://github.com/{full_name}/discussions)**: Share your insights, provide feedback, or ask questions.
-- **[Report Issues](https://github.com/{full_name}/issues)**: Submit bugs found or log feature requests for {repo_name}.
+- **[Submit Pull Requests](https://{host}/{full_name}/blob/main/CONTRIBUTING.md)**: Review open PRs, and submit your own PRs.
+- **[Join the Discussions](https://{host}/{full_name}/discussions)**: Share your insights, provide feedback, or ask questions.
+- **[Report Issues](https://{host}/{full_name}/issues)**: Submit bugs found or log feature requests for {repo_name}.
 
 <details closed>
-<summary>Contributing Guidelines</summary>
+    <summary>Contributing Guidelines</summary>
 
 1. **Fork the Repository**: Start by forking the project repository to your GitHub account.
 2. **Clone Locally**: Clone the forked repository to your local machine using a Git client.
    ```sh
-   git clone <your-forked-repo-url>
+   git clone {repo_url}
    ```
 3. **Create a New Branch**: Always work on a new branch, giving it a descriptive name.
    ```sh
    git checkout -b new-feature-x
    ```
 4. **Make Your Changes**: Develop and test your changes locally.
-5. **Commit Your Changes**: Commit with a clear and concise message describing your updates.
+5. **Commit Your Changes**: Commit with a clear message describing your updates.
    ```sh
    git commit -m 'Implemented new feature x.'
    ```
@@ -222,42 +226,45 @@ This project is protected under the [SELECT-A-LICENSE](https://choosealicense.co
 
 # Language Model Prompts
 [prompts]
-features = """Hello! Analyze the codebase "{0}" and create a concise analysis of each project component. \
-Consider the codebase as a whole and highlight the key characteristics, design patterns, architectural decisions, and any other noteworthy elements.
-Generate your response as a Markdown table with the following columns:
+features = """Hello! Please analyze the key technical capabilities and characteristics of the project {0} and describe them in a Markdown table format:
 
-|    | Feature           | Description                                                                                                       |
-|----|--------------------|--------------------------------------------------------------------------------------------------------------------|
-| ⚙️ | **Architecture**    | Analyze the structural design of the system here. The description should not exceed 99 characters in total.             |
-| 📄 | **Documentation**  | Discuss the quality and comprehensiveness of the documentation here. The description should not exceed 99 characters in total.|
-| 🔗 | **Dependencies**   | Examine the external libraries or other systems that this system relies on here. The description should not exceed 99 characters in total.|
-| 🧩 | **Modularity**     | Discuss the system's organization into smaller, interchangeable components here. The description should not exceed 99 characters in total.|
-| 🧪 | **Testing**        | Evaluate the system's testing strategies and tools here. The description should not exceed 99 characters in total.       |
-| ⚡️ | **Performance**     | Analyze how well the system performs, considering speed, efficiency, and resource usage here. The description should not exceed 99 characters in total.|
-| 🔐 | **Security**       | Assess the measures the system uses to protect data and maintain functionality here. The description should not exceed 99 characters in total.|
-| 🔀 | **Version Control**| Discuss the system's version control strategies and tools here. The description should not exceed 99 characters in total.|
-| 🔌 | **Integrations**   | Evaluate how the system interacts with other systems and services here. The description should not exceed 99 characters in total.|
-| 📶 | **Scalability**    | Analyze the system's ability to handle growth here. The description should not exceed 99 characters in total.           |
+|    |   Feature         | Description |
+|----|-------------------|---------------------------------------------------------------|
+| ⚙️  | **Architecture**  | *Quick facts about the project's architecture. Max 50 words.* |
+| 🔩 | **Code Quality**  | *Quick facts about the code quality and style. Max 50 words.* |
+| 📄 | **Documentation** | *Discuss the extent and quality of documentation. Max 50 words.* |
+| 🔌 | **Integrations**  | *List key integrations and external dependencies. Max 50 words.* |
+| 🧩 | **Modularity**    | *Discuss the modularity and reusability of the codebase. Max 50 words.* |
+| 🧪 | **Testing**       | *List testing frameworks and tools used. Max 50 words.* |
+| ⚡️  | **Performance**   | *Evaluate efficiency, speed and resource usage. Max 50 words.* |
+| 🛡️ | **Security**      | *Discuss measures used for data protection and access control. Max 50 words.* |
+| 📦 | **Dependencies**  | *List key external libraries and dependencies. Max 50 words.* |
+| 🚀 | **Scalability**   | *Assess ability to handle increased traffic and load. Max 50 words.* |
 
-Provided information includes:
-Repository directory structure: {1}
-Code files: {2}
+While generating the table, please reference the following codebase details:\n
+================================================================================
+Project dependencies: {1}
+Repository contents: {2}
+================================================================================
 """
-overview = """Analyze the codebase named {} ({}) and provide a robust, yet succinct overview of the project.\n
+overview = """Analyze the codebase named {0} ({1}) and provide a robust, yet succinct overview of the project.\n
 Craft a paragraph, 80 TOKEN MAXIMUM, that encapsulate the core functionalities of the project, its purpose and value proposition.\n
 Avoid deep technical details and focus on the project's high-level use cases and features.\n
-Provided are codebase file descriptions:\n{}\n
+Provided are codebase file descriptions:\n{2}\n
 """
-slogan = """Conceptualize a catchy and memorable slogan for the project: {}.\n
-Limit the project's slogan to 8 words or less.\n
-Use the following code summaries from the repository to help you craft the slogan:\n{}\n
+slogan = """Conceptualize a catchy and memorable slogan for the project: {0} ({1}).\n
+Limit the phrase to 8 words or less, and ensure it encapsulates the project's purpose
+and value proposition while engaging the reader. The following code summaries from the
+repository will help you craft your response:\n{2}\n
 """
 summaries = """Deliver a succinct summary in no more than 50 tokens, emphasizing the main role \
 and critical features of this code snippet in relation to its parent repository's architecture. \
 Focus on what the code achieves, steering clear of technical implementation details. Included are \
 supplementary details and materials about the codebase and its elements to enhance your understanding. \
-Provided information includes:\n
-- Repository layout and directory structure: {}
-- List of dependencies and software used in the codebase: {}
-- Summaries of key files within the codebase: {}
+While generating the summaries, please reference the following codebase details:
+================================================================================
+Repository structure: {0}
+File path: {1}
+File contents: {2}
+================================================================================
 """
