--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,14 +1,14 @@
-click
-colorlog
-cachetools
-gitpython
-httpx
-h2
-openai
-pydantic
-pyyaml
-responses
-tabulate
-tenacity
-tiktoken
-toml
+# Requirements for core
+jinja2~=3.0
+markdown~=3.2
+mkdocs~=1.5.3
+mkdocs-material-extensions~=1.3
+pygments~=2.16
+pymdown-extensions~=10.2
+
+# Requirements for plugins
+babel~=2.10
+colorama~=0.4
+paginate~=0.5
+regex>=2022.4
+requests~=2.26
