--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.090"
-description = "🚀 Generate beautiful README.md files from the terminal using GPT LLM APIs 💫"
+version = "0.4.990"
+description = "🎈 Automated README file generator, powered by GPT language model APIs"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
