--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pydantic==1.10.13 ; python_full_version >= "3.8.1" and python_full_version < "4.
 pyyaml==6.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 regex==2023.12.25 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 requests==2.31.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-responses==0.23.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+setuptools==69.0.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 smmap==5.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 sniffio==1.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 tabulate==0.9.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
@@ -34,7 +34,6 @@ tenacity==8.2.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.
 tiktoken==0.4.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 toml==0.10.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-types-pyyaml==6.0.12.12 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 typing-extensions==4.9.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 urllib3==2.1.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 yarl==1.9.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
