Add custom exception base class, improve code organization.

--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -71,9 +71,9 @@ toc = """
 > - [📂 Repository Structure](#-repository-structure)
 > - [🧩 Modules](#-modules)
 > - [🚀 Getting Started](#-getting-started)
->     - [⚙️ Installation](#-installation)
->     - [🤖 Running {repo_name}](#-running-{repo_name})
->     - [🧪 Tests](#-tests)
+>   - [⚙️ Installation](#️-installation)
+>   - [🤖 Running {repo_name}](#-running-{repo_name})
+>   - [🧪 Tests](#-tests)
 > - [🛠 Project Roadmap](#-project-roadmap)
 > - [🤝 Contributing](#-contributing)
 > - [📄 License](#-license)
