--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.993"
+version = "0.4.994"
 description = "🎈 Automated README file generator, powered by GPT language model APIs"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -112,6 +112,16 @@ use_parentheses = true
 known_third_party = "pytest"
 sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
 no_lines_before = 'LOCALFOLDER'
+
+[tool.pytest]
+adopt = "-v -n auto --asyncio-mode=auto --cov=. --cov-report=xml --cov-report=term-missing"
+plugins = [
+    "pytest-asyncio",
+    "pytest-cov",
+    "pytest-randomly",
+    "pytest-sugar",
+    "pytest-xdist",
+]
 
 [tool.coverage.run]
 # branch = true
