--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,18 +17,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest coverage pytest-cov setuptools
-
+        pip install -r requirements.txt coverage pytest pytest-cov pytest-asyncio pytest-xdist pytest-randomly pytest sugar
     - name: Install Project
       run: |
-        pip install -e .
+        python -m pip install -e .
 
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=./ --cov-report=xml
+        pytest -n auto --asyncio-mode=auto --cov=. --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
