--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt coverage pytest pytest-cov pytest-asyncio pytest-xdist pytest-randomly pytest sugar
+        pip install -r requirements.txt coverage pytest pytest-cov pytest-asyncio pytest-xdist pytest-randomly pytest-sugar
     - name: Install Project
       run: |
         python -m pip install -e .
