--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 aiosignal==1.3.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+anyio==4.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 async-timeout==4.0.3 ; python_full_version >= "3.8.1" and python_version < "3.11"
 attrs==23.2.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 certifi==2023.11.17 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
@@ -7,9 +8,16 @@ charset-normalizer==3.3.2 ; python_full_version >= "3.8.1" and python_full_versi
 click==8.1.7 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0" and (platform_system == "Windows" or sys_platform == "win32")
 colorlog==6.8.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+exceptiongroup==1.2.0 ; python_full_version >= "3.8.1" and python_version < "3.11"
 frozenlist==1.4.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 gitdb==4.0.11 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 gitpython==3.1.40 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+h11==0.14.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+h2==4.1.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+hpack==4.0.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+httpcore==1.0.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+httpx==0.26.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+hyperframe==6.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 idna==3.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 multidict==6.0.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 openai==0.27.10 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
@@ -19,6 +27,7 @@ regex==2023.12.25 ; python_full_version >= "3.8.1" and python_full_version < "4.
 requests==2.31.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 setuptools==69.0.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 smmap==5.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+sniffio==1.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 tenacity==8.2.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 tiktoken==0.4.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 toml==0.10.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
