--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.999"
-description = "🎈 Automated README file generator, powered by GPT language model APIs"
+version = "0.5.0-beta"
+description = "🎈 Automated README file generator, powered by large language model APIs"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -51,6 +51,8 @@ tiktoken = "^0.4.0"
 toml = "^0.10.2"
 pydantic = ">=1.10.9,<2.0.0"
 setuptools = "^69.0.3"
+mkdocstrings = "^0.24.0"
+mike = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "*"
@@ -66,6 +68,8 @@ pytest-xdist = "*"
 [tool.poetry.group.docs.dependencies]
 mkdocs = "*"
 mkdocs-material = "*"
+mkdocstrings = "*"
+mike = "*"
 
 [tool.ruff]
 exclude = [
