--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -23,7 +23,7 @@ jobs:
           poetry install
 
     - name: Build the MkDocs site
-      run: mkdocs build
+      run: poetry run mkdocs build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
