--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.5.0-beta.1"
+version = "0.4.999"
 description = "🎈 Automated README file generator, powered by large language model APIs"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
